istio/consistent-hash/nginx-canary-istio/destionation-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nginx-dr
spec:
  host: nginx-service
  # Regra de loadbalancer que será utilizada, por default usamos o ROUND_ROBIN, mas podemos trocar por como LEAST_CONN e  
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
  subsets:
    - name: v1
      labels:
        version: A
      # Regra de loadbalancer que será utilizada dentro do subset depois de ter sido redirecionado para esse subset utilizando o ROUND_ROBIN na camada anterior 
      trafficPolicy:
        loadBalancer:
          simple: LEAST_CONN
    - name: v2
      labels:
        version: B
      trafficPolicy:
        loadBalancer:
          simple: LEAST_CONN
