istio/consistent-hash/nginx-canary-istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-vs
spec:
  hosts:
  - nginx-service
  http:
    - route:
      - destination:
          host: nginx-service
          # Será setado pela destionation rule
          subset: v1
        weight: 90
      - destination:
          host: nginx-service
          # Será setado pela destionation rule
          subset: v2
        weight: 10
